# itskai

./: .annotaterb.yml  .bash_profile  .bashrc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .graphqlrc.yml  .inputrc  .lintstagedrc.js  .lintstagedrc.json  .prettierignore  .prettierrc.json  .pryrc  .rubocop.yml  .zcustomizations  .zshrc  Aptfile  Brewfile  Dockerfile  Gemfile  Procfile  Procfile.ci-test  Procfile.dev  Procfile.test  README.md  Rakefile  cffi-2.0.0-cp313-cp313-macosx_11_0_arm64.whl  docker-compose.yml  eslint.config.js  fido2-2.0.0-py3-none-any.whl  fly.toml  graphql.config.ts  icloudctl.py  itskai.code-workspace  jaraco.classes-3.4.0-py3-none-any.whl  jaraco.context-6.0.1-py3-none-any.whl  jaraco_functools-4.3.0-py3-none-any.whl  (+20 more)
.husky/: pre-commit
config/: application.rb  auto-import.config.ts  auto-import.ts  badwords.txt  boot.rb  cable.yml  credentials.yml.enc  database.yml  explorations.yml  graphql-codegen.app.ts  graphql-codegen.client.ts  graphql-codegen.config.ts  graphql-codegen.extension.ts  graphql-codegen.schema.ts  honeybadger.yml  puma.rb  resume-hackglobal.yml  resume-rippling.yml  resume.yml  routes.rb  storage.yml  swc.config.js  vite.json  webpacker.yml
db/: schema.rb  seeds.rb
dishwatcher/: dishwatcher.py  poetry.toml  pyproject.toml
extension/: .env.example  .eslintrc.json  .gitignore  .graphqlrc.yml  .lintstagedrc.js  .prettierignore  .prettierrc.json  index.html  manifest.json  package.json  schema.generated.graphql  tsconfig.json  tsconfig.node.json  vite.config.ts
graphql/: schema.graphql
lib/: action_policy_ext.rb  actionview_ext.rb  activesupport_ext.rb  admin.rb  alerts.rb  annotate_ext.rb  announcement.rb  badwords.rb  better_errors_ext.rb  bullet_ext.rb  clarity.rb  contact.rb  core_ext.rb  css_parser_ext.rb  custom_devise_failure_app.rb  devise_ext.rb  discordrb_ext.rb  email_validator_ext.rb  explorations.rb  friendly_id_ext.rb  fullstory.rb  geocoder_ext.rb  google.rb  google_ext.rb  graphql_ext.rb  icloud.py  icloud.rb  inertia_rails_ext.rb  inflections.rb  instagram.rb  js_from_routes_ext.rb  location.rb  logging.rb  lyrics.rb  mapbox.rb  notifications.rb  obsidian.rb  oj_serializers_ext.rb  omniauth-linear.rb  owner.rb  (+14 more)
patches/: @mantine+nprogress+6.0.13.patch  react-dropzone+14.2.3.patch
public/: admin-notifications.webmanifest  admin-statuses.webmanifest  site.webmanifest
(+3005 files in other folders)
