[tool.poetry]
  name = "itskai"
  version = "0"
  description = ""
  authors = []
  license = "UNLICENSED"
  readme = "README.md"

[tool.poetry.dependencies]
  python = "^3.12"
  pyicloud = "^1.0.0"
  Pillow = "^10.1.0"
  instagrapi = "^2.0.0"

[tool.poetry.group.dev.dependencies]
  black = "^23.11.0"
  flake8 = "^6.1.0"

[build-system]
  requires = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"
