[tool.poetry]
  name = "itskai"
  version = "0"
  description = ""
  authors = []
  license = "UNLICENSED"
  readme = "README.md"

[tool.poetry.scripts]
  icloudctl = "icloudctl:main"

[tool.poetry.dependencies]
  python = "^3.11.6"
  Pillow = "^10.1.0"
  instagrapi = "^2.0.0"
  pyicloud = "^1.0.0"
  flask = "^3.0.2"
  fastwsgi = "^0.0.9"

[tool.poetry.group.dev.dependencies]
  black = "^23.11.0"
  flake8 = "^6.1.0"

[tool.mypy]
  check_untyped_defs = true

[build-system]
  requires = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"
