[tool.poetry]
  name = "itskai"
  version = "0"
  description = ""
  authors = []
  license = "UNLICENSED"
  readme = "README.md"

[tool.poetry.scripts]
  icloudctl = "icloudctl:main"

[tool.poetry.dependencies]
  python = "^3.11.6"
  Pillow = "^10.1.0"
  instagrapi = "^2.0.0"
  pyicloud = { git = "https://github.com/pop2pop3/pyicloud.git", branch = "patch-2" }
  flask = "^3.0.2"
  fastwsgi = "^0.0.9"
  srp = "^1.0.21"

[tool.poetry.group.dev.dependencies]
  black = "^23.11.0"
  flake8 = "^6.1.0"
  mypy = "^1.10.0"

[tool.mypy]
  check_untyped_defs = true
  exclude = "(__pycache__|node_modules|^vendor|^.husky|^tmp|^storage|^public/dist-\\w+)"

[tool.black]
  extend-exclude = "(__pycache__|node_modules|^/vendor|^/tmp|^/storage|^/public/dist-\\w+)"
  force-exclude = "(__pycache__|node_modules|^/vendor|^/tmp|^/storage|^/public/dist-\\w+)"

[build-system]
  requires = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"
