[tool.poetry]
  name = "dishwatcher"
  version = "0"
  description = ""
  authors = []

[tool.poetry.scripts]
  dishwatcher = "dishwatcher:main"

[tool.poetry.dependencies]
  python = "^3.12"
  gql = { extras = ["all"], version = "^3.5.0" }


[build-system]
  requires = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"
